@@ -11,7 +11,7 @@
     view=".views.my_view"
     />
 
-  <route path="static/*subpath"
+  <view 
     name="static"
     view=".views.static_view"
     />
